create new feature delete user, auto import avatar when create account, get list with avatar
