# swagger.json
@@ -130,6 +130,24 @@
           }
         ]
       }
+    },
+    "/user/delete/{userId}": {
+      "delete": {
+        "tags": ["User"],
+        "summary": "Get user by ID",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "responses": {},
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "description": "delete user by id",
+            "required": true,
+            "type": "string"
+          }
+        ]
+      }
     }
   }
 }
